--- a/Idea2/SortingVisualizerJFX/src/UI/Init.fxml
+++ b/Idea2/SortingVisualizerJFX/src/UI/Init.fxml
@@ -13,53 +13,101 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1202.0" prefWidth="1048.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="UI.WindowController">
-   <children>
-      <AnchorPane prefHeight="159.0" prefWidth="1018.0">
+<ScrollPane fx:id="scrollPane" prefHeight="1149.0" prefWidth="1081.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.InitController">
+   <content>
+      <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1202.0" prefWidth="1048.0">
          <children>
-            <Label layoutX="95.0" layoutY="18.0" prefHeight="106.0" prefWidth="828.0" text="Herr Decker stinkt">
-               <font>
-                  <Font size="96.0" />
-               </font>
-            </Label>
+            <AnchorPane prefHeight="73.0" prefWidth="1039.0">
+               <children>
+                  <Label layoutX="361.0" layoutY="-6.0" prefHeight="106.0" prefWidth="828.0" text="Sorting Visualizer">
+                     <font>
+                        <Font size="49.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+            <AnchorPane prefHeight="1094.0" prefWidth="1018.0">
+               <children>
+                  <TextField fx:id="Tb_position" layoutX="190.0" layoutY="561.0" prefHeight="29.0" prefWidth="180.0" />
+                  <TextField fx:id="Tb_charInput" layoutX="576.0" layoutY="561.0" onInputMethodTextChanged="#Tb_charInput_changed" />
+                  <Label layoutX="14.0" layoutY="567.0" text="Position (optional):" />
+                  <Label layoutX="398.0" layoutY="567.0" text="String (1-6 Zeichen):" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c5dbee" height="176.0" layoutX="14.0" layoutY="639.0" stroke="WHITE" strokeType="INSIDE" width="959.0" />
+                  <Label layoutX="30.0" layoutY="651.0" text="Zufallsgenerator:" />
+                  <Button fx:id="Bt_add" layoutX="831.0" layoutY="561.0" mnemonicParsing="false" onMouseClicked="#Bt_add_clicked" text="Hinzufügen" />
+                  <Button fx:id="Bt_generate" layoutX="831.0" layoutY="714.0" mnemonicParsing="false" onMouseClicked="#Bt_generate_clicked" text="Generieren" />
+                  <CheckBox fx:id="Cb_upper" layoutX="450.0" layoutY="700.0" mnemonicParsing="false" text="Großbuchstaben" />
+                  <CheckBox fx:id="Cb_lower" layoutX="450.0" layoutY="758.0" mnemonicParsing="false" text="Kleinbuchstaben" />
+                  <CheckBox fx:id="Cb_digits" layoutX="671.0" layoutY="700.0" mnemonicParsing="false" text="Zahlen" />
+                  <CheckBox fx:id="Cb_specChar" layoutX="671.0" layoutY="758.0" mnemonicParsing="false" text="Sonderzeichen" />
+                  <Label layoutX="443.0" layoutY="651.0" text="Zu verwendende Zeichen:" />
+                  <Label layoutX="62.0" layoutY="700.0" text="Anzahl Einträge:" />
+                  <Label layoutX="62.0" layoutY="745.0" text="Stringlänge jeweils:" />
+                  <ComboBox fx:id="Cb_StrLength" layoutX="248.0" layoutY="739.0" prefHeight="39.0" prefWidth="122.0" />
+                  <TextField fx:id="Tb_entryCount" layoutX="248.0" layoutY="694.0" prefHeight="39.0" prefWidth="122.0" />
+                  <TableView fx:id="Table" layoutX="14.0" layoutY="96.0" prefHeight="423.0" prefWidth="949.0">
+                     <columns>
+                        <TableColumn fx:id="Table_pos" prefWidth="485.0" text="Position" />
+                        <TableColumn fx:id="Table_val" minWidth="0.0" prefWidth="451.0" text="Wert" />
+                     </columns>
+                  </TableView>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#7ec1ff" height="98.0" layoutX="14.0" layoutY="826.0" stroke="WHITE" strokeType="INSIDE" width="959.0" />
+                  <Label layoutX="38.0" layoutY="859.0" text="Sortieralgorithmus:" />
+                  <RadioButton fx:id="Rb_LSD" layoutX="223.0" layoutY="859.0" mnemonicParsing="false" onMouseClicked="#Rb_LSD_clicked" text="RadixSort (Least Significant Digit)" />
+                  <RadioButton fx:id="Rb_MSD" layoutX="567.0" layoutY="859.0" mnemonicParsing="false" onMouseClicked="#Rb_MSD_clicked" text="RadixSort (Most Significant Digit)" />
+                  <Button fx:id="Bt_info" layoutX="898.0" layoutY="853.0" mnemonicParsing="false" onMouseClicked="#Bt_info_clicked" prefHeight="39.0" prefWidth="56.0" text="Info" />
+                  <Button fx:id="Bt_start" layoutX="14.0" layoutY="955.0" mnemonicParsing="false" onMouseClicked="#Bt_start_clicked" prefHeight="45.0" prefWidth="959.0" text="Start" />
+                  <Label fx:id="Lb_error_algo" layoutX="223.0" layoutY="892.0" prefHeight="17.0" prefWidth="372.0" text="Bitte einen Sortieralgorithmus auswählen!" textFill="#e10000" visible="false">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="Lb_error_symbols" layoutX="452.0" layoutY="790.0" prefHeight="17.0" prefWidth="341.0" text="Bitte mindestens eine Zeichenklasse auswählen!" textFill="#d00000" visible="false">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="Lb_error_count" layoutX="50.0" layoutY="790.0" prefHeight="17.0" prefWidth="345.0" text="Bitte Anzahl der zu generierenden Einträge angeben!" textFill="#bf0000" visible="false">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="Lb_error_count_out_of_bounds" layoutX="61.0" layoutY="782.0" prefHeight="17.0" prefWidth="433.0" text="Unzulässige Anzahl von Einträgen: muss zwischen 1 und 200 liegen!" textFill="#d00000" visible="false">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="Lb_error_str_length" layoutX="581.0" layoutY="608.0" prefHeight="17.0" prefWidth="212.0" text="Unzulässige Stringlänge!" textFill="#c90000" visible="false">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="Lb_error_empty_field" layoutX="576.0" layoutY="608.0" prefHeight="17.0" prefWidth="212.0" text="Feld darf nicht leer sein!" textFill="#d30000" visible="false">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="Lb_error_no_entries" layoutX="377.0" layoutY="1015.0" prefHeight="17.0" prefWidth="333.0" text="Nicht genügend Einträge vorhanden, um sie zu sortieren!" textFill="#d00000" visible="false">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="Lb_error_pos_occupied" layoutX="190.0" layoutY="600.0" text="Position ist bereits vergeben!" textFill="#cd0000" visible="false">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="Lb_error_wrong_pos" layoutX="190.0" layoutY="600.0" prefHeight="17.0" prefWidth="193.0" text="Unzulässige Zeichen!" textFill="#da0000" visible="false">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
          </children>
-      </AnchorPane>
-      <AnchorPane prefHeight="1035.0" prefWidth="1018.0">
-         <children>
-            <TextField layoutX="190.0" layoutY="561.0" prefHeight="29.0" prefWidth="180.0" />
-            <TextField fx:id="Tb_charInput" layoutX="576.0" layoutY="561.0" />
-            <Label layoutX="14.0" layoutY="567.0" text="Position (optional):" />
-            <Label layoutX="398.0" layoutY="567.0" text="String (1-6 Zeichen):" />
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c5dbee" height="176.0" layoutX="14.0" layoutY="639.0" stroke="WHITE" strokeType="INSIDE" width="959.0" />
-            <Label layoutX="30.0" layoutY="651.0" text="Zufallsgenerator:" />
-            <Button fx:id="Bt_add" layoutX="831.0" layoutY="561.0" mnemonicParsing="false" text="Hinzufügen" />
-            <Button fx:id="Bt_generate" layoutX="831.0" layoutY="714.0" mnemonicParsing="false" text="Generieren" />
-            <CheckBox fx:id="Cb_Upper" layoutX="450.0" layoutY="700.0" mnemonicParsing="false" text="Großbuchstaben" />
-            <CheckBox fx:id="Cb_Lower" layoutX="450.0" layoutY="758.0" mnemonicParsing="false" text="Kleinbuchstaben" />
-            <CheckBox fx:id="Cb_Digits" layoutX="671.0" layoutY="700.0" mnemonicParsing="false" text="Zahlen" />
-            <CheckBox fx:id="Cb_specChar" layoutX="671.0" layoutY="758.0" mnemonicParsing="false" text="Sonderzeichen" />
-            <Label layoutX="443.0" layoutY="651.0" text="Zu verwendende Zeichen:" />
-            <Label layoutX="62.0" layoutY="700.0" text="Anzahl Einträge:" />
-            <Label layoutX="62.0" layoutY="745.0" text="Stringlänge jeweils:" />
-            <ComboBox fx:id="Cb_StrLength" layoutX="248.0" layoutY="739.0" prefHeight="39.0" prefWidth="122.0" />
-            <TextField fx:id="Tb_entryCount" layoutX="248.0" layoutY="694.0" prefHeight="39.0" prefWidth="122.0" />
-            <TableView layoutX="14.0" layoutY="96.0" prefHeight="423.0" prefWidth="949.0">
-               <columns>
-                  <TableColumn fx:id="Table_pos" prefWidth="485.0" text="Position" />
-                  <TableColumn fx:id="Table_val" minWidth="0.0" prefWidth="451.0" text="Wert" />
-               </columns>
-            </TableView>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#7ec1ff" height="98.0" layoutX="14.0" layoutY="826.0" stroke="WHITE" strokeType="INSIDE" width="959.0" />
-            <Label layoutX="38.0" layoutY="859.0" text="Sortieralgorithmus:" />
-            <RadioButton layoutX="223.0" layoutY="859.0" mnemonicParsing="false" text="RadixSort (Least Significant Digit)" />
-            <RadioButton layoutX="567.0" layoutY="859.0" mnemonicParsing="false" text="RadixSort (Most Significant Digit)" />
-            <Button layoutX="898.0" layoutY="853.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="56.0" text="Info" />
-            <Button layoutX="14.0" layoutY="955.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="959.0" text="Start" />
-         </children>
-      </AnchorPane>
-   </children>
-   <padding>
-      <Insets left="30.0" />
-   </padding>
-</VBox>
+         <padding>
+            <Insets left="30.0" />
+         </padding>
+      </VBox>
+   </content>
+</ScrollPane>
