--- a/Idea2/SortingVisualizerJFX/src/UI/Init.fxml
+++ b/Idea2/SortingVisualizerJFX/src/UI/Init.fxml
@@ -54,7 +54,7 @@
                   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#7ec1ff" height="98.0" layoutX="16.0" layoutY="733.0" stroke="WHITE" strokeType="INSIDE" width="959.0" />
                   <Label layoutX="30.0" layoutY="773.0" text="Sortieralgorithmus:" />
                   <RadioButton fx:id="Rb_LSD" layoutX="217.0" layoutY="773.0" mnemonicParsing="false" onMouseClicked="#Rb_LSD_clicked" text="RadixSort (Least Significant Digit)" />
-                  <RadioButton fx:id="Rb_MSD" layoutX="563.0" layoutY="773.0" mnemonicParsing="false" onMouseClicked="#Rb_MSD_clicked" text="RadixSort (Most Significant Digit)" />
+                  <RadioButton fx:id="Rb_MSD" disable="true" layoutX="563.0" layoutY="773.0" mnemonicParsing="false" onMouseClicked="#Rb_MSD_clicked" text="RadixSort (Most Significant Digit)" />
                   <Button fx:id="Bt_info" layoutX="883.0" layoutY="767.0" mnemonicParsing="false" onMouseClicked="#Bt_info_clicked" prefHeight="39.0" prefWidth="56.0" text="Info" />
                   <Button fx:id="Bt_start" layoutX="14.0" layoutY="856.0" mnemonicParsing="false" onMouseClicked="#Bt_start_clicked" prefHeight="45.0" prefWidth="959.0" text="Start" />
                   <Label fx:id="Lb_error_algo" layoutX="358.0" layoutY="805.0" prefHeight="17.0" prefWidth="372.0" text="Bitte einen Sortieralgorithmus auswählen!" textFill="#e10000" visible="false">
