--- a/Idea2/SortingVisualizerJFX/src/UI/Visualization.fxml
+++ b/Idea2/SortingVisualizerJFX/src/UI/Visualization.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="475.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.VisualizationController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="475.0" prefWidth="759.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.VisualizationController">
    <children>
       <BarChart fx:id="input" prefHeight="130.0" prefWidth="580.0">
         <xAxis>
@@ -26,19 +26,52 @@
           <NumberAxis side="LEFT" />
         </yAxis>
       </BarChart>
-      <HBox prefHeight="100.0" prefWidth="200.0">
+      <HBox prefHeight="135.0" prefWidth="739.0">
          <children>
-            <VBox prefHeight="100.0" prefWidth="476.0">
+            <VBox prefHeight="100.0" prefWidth="397.0">
                <children>
                   <Label text="Erklärung:" />
                   <TextArea fx:id="explanation" prefHeight="200.0" prefWidth="200.0" />
                </children>
             </VBox>
-            <Button fx:id="nextStep" mnemonicParsing="false" onMouseClicked="#nextStepClicked" prefHeight="78.0" prefWidth="74.0" text="Next Step">
+            <Button fx:id="nextStep" mnemonicParsing="false" onMouseClicked="#nextStepClicked" prefHeight="114.0" prefWidth="68.0" text="Next Step">
                <HBox.margin>
                   <Insets left="20.0" top="20.0" />
                </HBox.margin>
             </Button>
+            <Button fx:id="autorun" mnemonicParsing="false" onMouseClicked="#autorunClicked" prefHeight="114.0" prefWidth="61.0" text="Autorun">
+               <HBox.margin>
+                  <Insets left="20.0" right="20.0" top="20.0" />
+               </HBox.margin>
+            </Button>
+            <VBox prefHeight="100.0" prefWidth="143.0">
+               <children>
+                  <HBox prefHeight="36.0" prefWidth="143.0">
+                     <children>
+                        <Label text="Current Position: " />
+                        <Label fx:id="Lb_currPos"/>
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="32.0" prefWidth="143.0">
+                     <children>
+                        <Label text="Current Number: " />
+                        <Label fx:id="Lb_currNumber"/>
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="32.0" prefWidth="143.0">
+                     <children>
+                        <Label text="Current Element: " />
+                        <Label fx:id="Lb_currElement"/>
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="32.0" prefWidth="143.0">
+                     <children>
+                        <Label text="Step Count: " />
+                        <Label fx:id="Lb_steps"/>
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
          </children>
       </HBox>
    </children>
