--- a/Idea2/SortingVisualizerJFX/src/UI/Help.fxml
+++ b/Idea2/SortingVisualizerJFX/src/UI/Help.fxml
@@ -1,16 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="UI.HelpController"
-            prefHeight="400.0" prefWidth="600.0">
-    <children>
-        <TextArea fx:id="text" layoutX="0.0" layoutY="0.0" prefHeight="400.0" prefWidth = "600.0" ></TextArea>
-    </children>
-</AnchorPane>
+
+<VBox prefHeight="397.0" prefWidth="597.0" fx:controller="UI.HelpController" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <TabPane prefHeight="401.0" prefWidth="597.0" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
+        <tabs>
+          <Tab text="RadixSort LSD">
+               <content>
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <ScrollPane prefViewportHeight="352.0" prefViewportWidth="597.0" VBox.vgrow="ALWAYS">
+                           <content>
+                              <TextArea fx:id="Ta_RadixSort_LSD" prefHeight="352.0" prefWidth="597.0" VBox.vgrow="ALWAYS" />
+                           </content>
+                        </ScrollPane>
+                     </children>
+                  </VBox>
+               </content>
+          </Tab>
+          <Tab text="BubbleSort">
+               <content>
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <ScrollPane prefViewportHeight="352.0" prefViewportWidth="597.0" VBox.vgrow="ALWAYS">
+                           <content>
+                              <TextArea fx:id="Ta_BubbleSort" prefHeight="352.0" prefWidth="597.0" VBox.vgrow="ALWAYS" />
+                           </content>
+                        </ScrollPane>
+                     </children>
+                  </VBox>
+               </content>
+          </Tab>
+            <Tab text="Autor">
+               <content>
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <ScrollPane prefViewportHeight="352.0" prefViewportWidth="597.0" VBox.vgrow="ALWAYS">
+                           <content>
+                              <TextArea fx:id="Ta_Author" prefHeight="352.0" prefWidth="597.0" VBox.vgrow="ALWAYS" />
+                           </content>
+                        </ScrollPane>
+                     </children>
+                  </VBox>
+               </content>
+            </Tab>
+        </tabs>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </TabPane>
+   </children>
+</VBox>
