--- a/Idea2/SortingVisualizerJFX/src/UI/Init.fxml
+++ b/Idea2/SortingVisualizerJFX/src/UI/Init.fxml
@@ -13,11 +13,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<ScrollPane fx:id="scrollPane" prefHeight="1100.0" prefWidth="1061.0" stylesheets="@InitStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.InitController">
+<ScrollPane fx:id="scrollPane" prefHeight="1070.0" prefWidth="1061.0" stylesheets="@InitStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.InitController">
    <content>
       <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1064.0" prefWidth="1048.0">
          <children>
-            <AnchorPane prefHeight="73.0" prefWidth="1039.0">
+            <AnchorPane prefHeight="118.0" prefWidth="1155.0">
                <children>
                   <Label layoutX="298.0" layoutY="12.0" prefHeight="106.0" prefWidth="828.0" text="Sorting Visualizer">
                      <font>
@@ -35,7 +35,7 @@
                   <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c5dbee" height="176.0" layoutX="16.0" layoutY="537.0" stroke="WHITE" strokeType="INSIDE" width="959.0" />
                   <Label layoutX="30.0" layoutY="545.0" text="Zufallsgenerator:" />
                   <Button fx:id="Bt_add" layoutX="700.0" layoutY="453.0" mnemonicParsing="false" onMouseClicked="#Bt_add_clicked" prefHeight="67.0" prefWidth="116.0" text="Hinzufügen" />
-                  <Button fx:id="Bt_generate" layoutX="833.0" layoutY="609.0" mnemonicParsing="false" onMouseClicked="#Bt_generate_clicked" text="Generieren" />
+                  <Button fx:id="Bt_generate" layoutX="827.0" layoutY="595.0" mnemonicParsing="false" onMouseClicked="#Bt_generate_clicked" prefHeight="61.0" prefWidth="112.0" text="Generieren" />
                   <CheckBox fx:id="Cb_upper" layoutX="451.0" layoutY="604.0" mnemonicParsing="false" onMouseClicked="#Cb_upper_clicked" text="Großbuchstaben" />
                   <CheckBox fx:id="Cb_lower" layoutX="451.0" layoutY="658.0" mnemonicParsing="false" onMouseClicked="#Cb_lower_clicked" text="Kleinbuchstaben" />
                   <CheckBox fx:id="Cb_digits" layoutX="657.0" layoutY="603.0" mnemonicParsing="false" onMouseClicked="#Cb_digits_clicked" text="Zahlen" />
@@ -51,15 +51,13 @@
                         <TableColumn fx:id="Table_val" minWidth="0.0" prefWidth="461.0" styleClass="table_column" text="Wert" />
                      </columns>
                   </TableView>
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#7ec1ff" height="125.0" layoutX="16.0" layoutY="733.0" stroke="WHITE" strokeType="INSIDE" width="959.0" />
-                  <Label layoutX="36.0" layoutY="748.0" text="Sortieralgorithmus:" />
-                  <RadioButton fx:id="Rb_LSD" layoutX="217.0" layoutY="765.0" mnemonicParsing="false" onMouseClicked="#Rb_LSD_clicked" text="RadixSort (Least Significant Digit)" />
-                  <RadioButton fx:id="Rb_Bubble" layoutX="560.0" layoutY="765.0" mnemonicParsing="false" onMouseClicked="#Rb_Bubble_clicked" text="BubbleSort" />
-                  <RadioButton fx:id="Rb_QS" layoutX="218.0" layoutY="814.0" mnemonicParsing="false" onMouseClicked="#Rb_QS_clicked" text="QuickSort" />
-                  <RadioButton fx:id="Rb_Gnome" layoutX="560.0" layoutY="814.0" mnemonicParsing="false" onMouseClicked="#Rb_Gnome_clicked" text="Shellsort" />
-                  <Button fx:id="Bt_info" layoutX="883.0" layoutY="767.0" mnemonicParsing="false" onMouseClicked="#Bt_info_clicked" prefHeight="39.0" prefWidth="56.0" text="Info" />
-                  <Button fx:id="Bt_start" layoutX="14.0" layoutY="879.0" mnemonicParsing="false" onMouseClicked="#Bt_start_clicked" prefHeight="45.0" prefWidth="959.0" text="Start" />
-                  <Label fx:id="Lb_error_algo" layoutX="350.0" layoutY="841.0" prefHeight="17.0" prefWidth="372.0" text="Bitte einen Sortieralgorithmus auswählen!" textFill="#e10000" visible="false">
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#7ec1ff" height="105.0" layoutX="16.0" layoutY="733.0" stroke="WHITE" strokeType="INSIDE" width="959.0" />
+                  <Label layoutX="30.0" layoutY="772.0" text="Sortieralgorithmus:" />
+                  <RadioButton fx:id="Rb_LSD" layoutX="223.0" layoutY="772.0" mnemonicParsing="false" onMouseClicked="#Rb_LSD_clicked" text="RadixSort (Least Significant Digit)" />
+                  <RadioButton fx:id="Rb_Bubble" layoutX="616.0" layoutY="773.0" mnemonicParsing="false" onMouseClicked="#Rb_Bubble_clicked" text="BubbleSort" />
+                  <Button fx:id="Bt_info" layoutX="833.0" layoutY="766.0" mnemonicParsing="false" onMouseClicked="#Bt_info_clicked" prefHeight="39.0" prefWidth="108.0" text="Info" />
+                  <Button fx:id="Bt_start" layoutX="16.0" layoutY="858.0" mnemonicParsing="false" onMouseClicked="#Bt_start_clicked" prefHeight="45.0" prefWidth="959.0" text="Start" />
+                  <Label fx:id="Lb_error_algo" layoutX="371.0" layoutY="812.0" prefHeight="17.0" prefWidth="372.0" text="Bitte einen Sortieralgorithmus auswählen!" textFill="#e10000" visible="false">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -89,7 +87,7 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label fx:id="Lb_error_no_entries" layoutX="327.0" layoutY="933.0" prefHeight="17.0" prefWidth="333.0" text="Nicht genügend Einträge vorhanden, um sie zu sortieren!" textFill="#d00000" visible="false">
+                  <Label fx:id="Lb_error_no_entries" layoutX="327.0" layoutY="919.0" prefHeight="17.0" prefWidth="333.0" text="Nicht genügend Einträge vorhanden, um sie zu sortieren!" textFill="#d00000" visible="false">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
